--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             background: #28a745;
         }
 
+        .source { font-size: 12px }
+
         @media (max-width: 600px) {
             body {
                 padding: 10px;
@@ -102,6 +104,7 @@
         </div>
         <div class="text-content" id="description"></div>
         <button class="ai-toggle" id="ai-toggle">Toggle AI Mode: OFF</button>
+        <p class="source"><a href="https://github.com/ozten/exquisite-corpse-50">Source Code and more images</a></p>
     </div>
 
     <script>
